--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,6 +1,6 @@
 #Adsobalin Configuracion
-#Mon Nov 04 11:13:02 COT 2024
-estilo=11
+#Mon Nov 04 18:54:59 COT 2024
+estilo=20
 ip=127.0.0.1
 grupo=1
-nombre=Remi
+nombre=M
