comenzando a hacer GUI lobby, se han puesto las listas de nombres

--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,6 +1,7 @@
 #Adsobalin Configuracion
-#Mon Nov 04 18:54:59 COT 2024
-estilo=20
-ip=127.0.0.1
+#Wed Nov 06 22:32:26 COT 2024
+estilo=9
+ip=1234
 grupo=1
-nombre=M
+inicial=0
+nombre=Omi
