botón de retroceso en lobby y se prepararon los métodos de todas las transacciónes en la clase envios

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,7 @@ endorsed.classpath=
 excludes=
 includes=**
 jar.archive.disabled=${jnlp.enabled}
-jar.compress=false
+jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.JavaFX17.classpath}
@@ -67,7 +67,7 @@ javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
-javadoc.private=false
+javadoc.private=true
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -99,6 +99,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=true
 platform.active=JDK_17
 run.classpath=\
     ${javac.classpath}:\
