--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,7 +1,13 @@
 #Adsobalin Configuracion
-#Sat Nov 09 09:41:27 COT 2024
-estilo=2
+#Sat Nov 09 15:36:03 COT 2024
+lobini=1
+estilo=14
+talla=1
+obstaculos=6
+tiempo=3
+NPCs=14211
 ip=
-grupo=1
-inicial=0
+grupo=2
+inicial=1
 nombre=Omi
+encursable=false
