--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,13 +1,13 @@
 #Adsobalin Configuracion
-#Sat Nov 09 15:36:03 COT 2024
+#Sun Nov 10 16:44:04 COT 2024
 lobini=1
 estilo=14
-talla=1
-obstaculos=6
+talla=2
+obstaculos=3
 tiempo=3
-NPCs=14211
+NPCs=46995
 ip=
 grupo=2
 inicial=1
 nombre=Omi
-encursable=false
+encursable=true
