--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,7 +1,7 @@
 #Adsobalin Configuracion
-#Sun Dec 01 17:13:50 COT 2024
+#Sun Dec 01 17:35:03 COT 2024
 lobini=1
-estilo=20
+estilo=22
 talla=1
 obstaculos=4
 tiempo=1
@@ -9,5 +9,5 @@ NPCs=262143
 ip=
 grupo=0
 inicial=1
-nombre=Omi
+nombre=O12
 encursable=true
