--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,13 +1,13 @@
 #Adsobalin Configuracion
-#Sun Dec 01 17:35:03 COT 2024
+#Sun Dec 01 20:37:56 COT 2024
 lobini=1
-estilo=22
-talla=1
-obstaculos=4
-tiempo=1
+estilo=23
+talla=2
+obstaculos=3
+tiempo=5
 NPCs=262143
 ip=
-grupo=0
+grupo=2
 inicial=1
-nombre=O12
+nombre=O
 encursable=true
