programada la sincronización móvil de NPCs, falta probarla, también debería crear el mapa con un radio adecuado (sin árboles), pasar a la GUI juego, dibujar el puntaje y el tiempo restante

--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,13 +1,13 @@
 #Adsobalin Configuracion
-#Sun Dec 01 21:00:58 COT 2024
+#Sun Dec 01 21:50:54 COT 2024
 lobini=1
-estilo=23
-talla=2
-obstaculos=3
-tiempo=5
+estilo=19
+talla=1
+obstaculos=4
+tiempo=3
 NPCs=262143
 ip=
 grupo=2
 inicial=1
-nombre=O
+nombre=omi
 encursable=true
