ensayo sincronia NPC B 1

--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,13 +1,13 @@
 #Adsobalin Configuracion
-#Tue Dec 03 19:31:45 COT 2024
+#Tue Dec 03 19:48:54 COT 2024
 lobini=1
-estilo=20
+estilo=22
 talla=1
 obstaculos=4
 tiempo=3
 NPCs=262143
 ip=
-grupo=1
+grupo=0
 inicial=1
-nombre=omi
+nombre=Ami
 encursable=true
