ensayo sincronia NPC B 2

--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,7 +1,7 @@
 #Adsobalin Configuracion
-#Tue Dec 03 19:48:54 COT 2024
+#Tue Dec 03 19:55:53 COT 2024
 lobini=1
-estilo=22
+estilo=20
 talla=1
 obstaculos=4
 tiempo=3
@@ -9,5 +9,5 @@ NPCs=262143
 ip=
 grupo=0
 inicial=1
-nombre=Ami
+nombre=Omi
 encursable=true
