--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,13 +1,13 @@
 #Adsobalin Configuracion
-#Tue Dec 03 19:55:53 COT 2024
+#Tue Dec 03 20:11:04 COT 2024
 lobini=1
-estilo=20
+estilo=22
 talla=1
 obstaculos=4
 tiempo=3
 NPCs=262143
-ip=
+ip=192.168.1.12
 grupo=0
 inicial=1
-nombre=Omi
+nombre=Ami
 encursable=true
