--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,7 +1,7 @@
 #Adsobalin Configuracion
-#Tue Dec 03 20:34:15 COT 2024
+#Thu Dec 05 12:58:47 COT 2024
 lobini=1
-estilo=20
+estilo=22
 talla=1
 obstaculos=4
 tiempo=3
@@ -9,5 +9,5 @@ NPCs=262143
 ip=192.168.1.12
 grupo=0
 inicial=1
-nombre=Omi
+nombre=Ami
 encursable=true
