mejorado el sistema del main loop con FPS objetivo, ya no se ralentiza y luce más fluido, más veloz

--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,13 +1,13 @@
 #Adsobalin Configuracion
-#Thu Dec 05 13:38:52 COT 2024
+#Thu Dec 05 14:15:28 COT 2024
 lobini=1
-estilo=20
+estilo=22
 talla=1
 obstaculos=4
 tiempo=3
 NPCs=262143
-ip=192.168.1.12
-grupo=0
+ip=
+grupo=1
 inicial=1
-nombre=Omi
+nombre=Ami
 encursable=true
