--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,13 +1,13 @@
 #Adsobalin Configuracion
-#Thu Dec 05 14:15:28 COT 2024
+#Thu Dec 05 14:36:00 COT 2024
 lobini=1
-estilo=22
+estilo=20
 talla=1
 obstaculos=4
 tiempo=3
 NPCs=262143
-ip=
-grupo=1
+ip=192.168.1.12
+grupo=0
 inicial=1
-nombre=Ami
+nombre=Omi
 encursable=true
