listo el sistema de daño sincronizado, falta probarlo

--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,13 +1,13 @@
 #Adsobalin Configuracion
-#Thu Dec 05 17:58:49 COT 2024
+#Thu Dec 05 20:51:54 COT 2024
 lobini=1
-estilo=22
+estilo=20
 talla=1
 obstaculos=4
 tiempo=3
 NPCs=262143
-ip=192.168.1.12
+ip=
 grupo=0
 inicial=1
-nombre=ami
+nombre=omi
 encursable=true
