--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,13 +1,13 @@
 #Adsobalin Configuracion
-#Thu Dec 05 21:14:46 COT 2024
+#Thu Dec 05 21:36:31 COT 2024
 lobini=1
-estilo=20
+estilo=23
 talla=1
 obstaculos=4
 tiempo=3
-NPCs=262143
+NPCs=0
 ip=192.168.1.12
 grupo=1
 inicial=1
-nombre=omi
+nombre=umi
 encursable=true
