agregada la desconexión por ping, de clientes y borrado de avatares sombra, también sistema de reiniciado de partida, resultados a lobby en servidor, por probar

--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,7 +1,7 @@
 #Adsobalin Configuracion
-#Thu Dec 05 21:36:31 COT 2024
+#Thu Dec 05 21:42:18 COT 2024
 lobini=1
-estilo=23
+estilo=20
 talla=1
 obstaculos=4
 tiempo=3
@@ -9,5 +9,5 @@ NPCs=0
 ip=192.168.1.12
 grupo=1
 inicial=1
-nombre=umi
+nombre=ami
 encursable=true
