--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,13 +1,13 @@
 #Adsobalin Configuracion
-#Fri Dec 13 20:18:24 COT 2024
+#Fri Dec 13 22:21:18 COT 2024
 lobini=1
 estilo=20
 talla=1
 obstaculos=4
 tiempo=3
 NPCs=0
-ip=192.168.1.12
+ip=
 grupo=1
 inicial=1
-nombre=ami
+nombre=Umum
 encursable=true
