se separo el conteo de puntos entre usuario y NPC, para que no se sumen

--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,13 +1,13 @@
 #Adsobalin Configuracion
-#Fri Dec 13 22:21:18 COT 2024
+#Sat Dec 14 09:10:48 COT 2024
 lobini=1
-estilo=20
+estilo=25
 talla=1
 obstaculos=4
-tiempo=3
-NPCs=0
+tiempo=1
+NPCs=3591
 ip=
-grupo=1
+grupo=0
 inicial=1
-nombre=Umum
+nombre=Omi
 encursable=true
