la ventana maximizada conserva su tamaño, se balancearon los puntajes otorgados

--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,5 +1,5 @@
 #Adsobalin Configuracion
-#Sat Dec 14 17:42:35 COT 2024
+#Sat Dec 14 19:35:26 COT 2024
 lobini=1
 estilo=25
 talla=1
@@ -9,5 +9,5 @@ NPCs=15903
 ip=
 grupo=0
 inicial=1
-nombre=Omi
+nombre=Om
 encursable=true
