re guardado luego de vacaciones del sena

--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,7 +1,7 @@
 #Adsobalin Configuracion
-#Sat Dec 14 19:35:26 COT 2024
+#Thu May 08 17:27:33 COT 2025
 lobini=1
-estilo=25
+estilo=28
 talla=1
 obstaculos=4
 tiempo=2
@@ -9,5 +9,5 @@ NPCs=15903
 ip=
 grupo=0
 inicial=1
-nombre=Om
+nombre=Omi
 encursable=true
