actualized readme to english

--- a/src/config/config.properties
+++ b/src/config/config.properties
@@ -1,13 +1,13 @@
 #Adsobalin Configuracion
-#Sun May 25 16:06:02 COT 2025
+#Mon Dec 29 17:33:46 COT 2025
 lobini=1
-estilo=28
+estilo=4
 talla=1
 obstaculos=4
 tiempo=2
 NPCs=15903
-ip=
+ip=192.168.1.10
 grupo=0
 inicial=1
-nombre=Omi
+nombre=Jpjj
 encursable=true
